[package]
name = "alac"
version = "0.4.0"
authors = ["Edward Barnard <eabarnard@gmail.com>"]
description = "An ALAC decoder in Rust."
documentation = "https://docs.rs/alac/0.4.0"
repository = "https://github.com/ebarnard/alac.rs"
keywords = ["decoder", "audio"]
license = "MIT/Apache-2.0"

[dependencies]
byteorder = "1.0.0"
